✨ Add public statistics to user
