# app/Models/User.php
@@ -91,4 +91,9 @@ class User extends Authenticatable
     {
         return $this->hasMany(Like::class);
     }
+
+    public function statistics(): HasOne
+    {
+        return $this->hasOne(UserStatistics::class);
+    }
 }
